# django-simple-category

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  tests.py
category/: models.py
category/locale/zh_hans/LC_MESSAGES/: django.mo  django.po
locale/en/LC_MESSAGES/: django.po
