[metadata]
name = django-simple-category
version = 0.1
description = A simple and extendable hierarchical category app for django.
long_description = file: README.rst
url = https://www.github.com/xionxiao/django-simple-category/
author = Allen Shaw
author_email = xhui.xiao@gmail.com
license = BSD-3-Clause 
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 1.11
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
