[metadata]
name = django-simple-category
version = 1.0.1
description = A simple and extendable hierarchical category app for django.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.github.com/xionxiao/django-simple-category/
author = Allen Shaw
author_email = xhui.xiao@gmail.com
license = BSD-3-Clause 
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
install_requires = Django
packages = find:
